ynet.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ynet-deployment
  labels:
    app: ynet

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ynet
  template:
    metadata:
      labels:
        app: ynet
    spec:
      containers:
        - name: ynet
          image: ahmad12abed/ynet
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service

metadata:
  name: ynet-service

spec:
  type: ClusterIP
  selector:
    app: ynet
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
